[gd_scene load_steps=3 format=3 uid="uid://dr5e61phtucv7"]

[ext_resource type="Script" path="res://example.gd" id="1_fbp2v"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_xwvvf"]
number_color = Color(0, 0, 0.901961, 1)
symbol_color = Color(0.839216, 0.854902, 0, 1)
function_color = Color(0.844772, 0.506011, 1.92523e-07, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_fbp2v")

[node name="Panel" type="Panel" parent="."]
offset_right = 1147.0
offset_bottom = 648.0
size_flags_horizontal = 6
size_flags_vertical = 6
metadata/_edit_use_anchors_ = true

[node name="title" type="LineEdit" parent="."]
offset_left = 79.0
offset_top = 13.0
offset_right = 490.0
offset_bottom = 62.0
size_flags_horizontal = 6
size_flags_vertical = 6
placeholder_text = "note title"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="note_text" type="TextEdit" parent="."]
offset_top = 84.0
offset_right = 731.0
offset_bottom = 642.0
size_flags_horizontal = 6
size_flags_vertical = 6
indent_wrapped_lines = true
scroll_smooth = true
scroll_past_end_of_file = true
minimap_draw = true
syntax_highlighter = SubResource("CodeHighlighter_xwvvf")
highlight_all_occurrences = true
highlight_current_line = true
metadata/_edit_use_anchors_ = true

[node name="save_button" type="Button" parent="."]
offset_left = 531.0
offset_top = 15.0
offset_right = 650.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SAVE"
metadata/_edit_use_anchors_ = true

[node name="note_list" type="ItemList" parent="."]
offset_left = 748.0
offset_top = 79.0
offset_right = 1141.0
offset_bottom = 635.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 756.0
offset_top = 30.0
offset_right = 1141.0
offset_bottom = 53.0
text = "NOTES"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="item_selected" from="note_list" to="." method="_on_note_list_item_selected"]
